<!--
    This file stores application specific items that is not expected to be changed. These values are hardcoded values needed for thr app to function properly.
-->
<resources>
    <!--General Application Naming and Information-->
    <string name="app_name_full">Behavioral and Environmental Sensing and Intervention</string>     <!-- Full name of the application -->
    <string name="app_name_abbreviated">BESI-C</string>     <!-- This is the abbreviated format of the application name -->

    <!--User Interface Naming Information-->
    <string name="battery_level_string">Battery:</string>   <!--This is the battery information shown in front of the battery information-->
    <string name="start_string">START</string>  <!--This is the string that is shown on the green button-->
    <string name="sleep_string">SLEEP</string>  <!--This is the string that is shown on the blue button-->
    <string name="dnd_string">DO NOT DISTURB</string>  <!--This is the string that is shown on the blue button-->
    <string name="eodema_string">DAILY SURVEY</string>  <!--This is the string that is shown on the red button-->
    <string name="survey_string">Text</string>      <!--The id for the survey question-->
    <string name="back_button">Back</string>        <!--The id for the back button-->
    <string name="next_button">Next</string>        <!--The id for the next button-->
    <string name="done_button">Done</string>        <!--The id for the done button-->
    <string name="answer_button">Answer</string>        <!--The id for the answer button-->
    <string name="dismiss_button">Dismiss</string>        <!--The id for the dismiss button-->
    <string name="proceed_button">Go</string>        <!--The id for the proceed button-->
    <string name="snooze_button">Snooze</string>        <!--The id for the snooze button-->
    <string name="thank_you">Thank You!</string>      <!--The thank you toast for completing a survey-->
    <string name="todo">TODO</string>        <!--TODO string resource-->
    <string name="low_battery_request">Please Charge the Watch Now</string>       <!--Question for the low battery file-->
    <string name="endofday_request">Please answer the following questions over the past day…</string>       <!--Question for the prompt file-->

    <!--User Interface Size Information-->
    <string name="ui_time_size">85</string>     <!--Size of the time-->
    <string name="ui_date_size">38</string>     <!--Size of the date-->
    <string name="ui_battery_size">25</string>      <!--Size of the battery text-->
    <string name="ui_start_button_size">65</string>     <!--Size of the start button-->
    <string name="ui_sleep_button_size">50</string>     <!--Size of the sleep button-->
    <string name="ui_survey_button_size">40</string>        <!--Size of the survey button-->
    <string name="ui_button_ambient">2</string>            <!--Size of the survey button while in ambient mode-->
    <string name="ui_button_not_ambient">1</string>       <!--Size of the survey button when out of ambient mode-->

    <!--Name of Unique Device Screens-->
    <string name="watchface_name">BESI-C</string>  <!--This is the string that is shown as the watchface name-->
    <string name="mainactivity_name">BESI-C: Main Activity</string>  <!--This is the string that is shown as the mainactivity name-->
    <string name="amazon_name">BESI-C: Amazon Upload</string>  <!--This is the string that is shown as the upload name-->
    <string name="batteryactivity_name">BESI-C: Battery Activity</string>   <!--This is the string that is shown as the battery activity name-->
    <string name="preference_name">BESI-C: Preferences</string>  <!--This is the string that is shown as the settings name-->
    <string name="datalogger_name">BESI-C: DataLogger</string>  <!--This is the string that is shown as the datalogger name-->
    <string name="painsurvey_name">BESI-C: Pain Survey</string>  <!--This is the string that is shown as the pain survey name-->
    <string name="followupsurvey_name">BESI-C: Followup Survey</string>  <!--This is the string that is shown as the followup survey name-->
    <string name="endofdaysurvey_name">BESI-C: End Of Day Survey</string>   <!--This is the string that is shown as the endofday survey name-->
    <string name="endofdaypromptone_name">BESI-C: End Of Day Automatic Prompt 1</string>   <!--This is the string that is shown as the endofday survey prompt name-->
    <string name="endofdayprompttwo_name">BESI-C: End Of Day Automatic Prompt 2</string>   <!--This is the string that is shown as the endofday survey prompt name-->
    <string name="endofdaypromptthree_name">BESI-C: End Of Day Automatic Prompt 3</string>   <!--This is the string that is shown as the endofday survey prompt name-->
    <string name="endofdaypromptmanual_name">BESI-C: End Of Day Manual Prompt</string>   <!--This is the string that is shown as the endofday survey prompt name-->

    <!--The name of the Sub Folders for information to be stored-->
    <string name="subdirectory_information">Information</string>     <!--This is the sub folder where some system information will be stored-->
    <string name="subdirectory_survey_activities">Activities</string>     <!--This is the sub folder where the survey activities will be stored-->
    <string name="subdirectory_survey_responses">Responses</string>     <!--This is the sub folder where the survey results will be stored-->
    <string name="subdirectory_sensors">Sensors</string>        <!--This is the sub folder where heartrate data will be saved-->
    <string name="subdirectory_logs">Logs</string>       <!--This is the sub folder where logs about activities and actions on the device will be saved-->

    <!--The general name of the files where items will be stored-->
    <string name="settings">Settings.csv</string>       <!--Name of the settings file-->
    <string name="painactivity">PainActivity.csv</string>       <!--Name of the file that would store individual answers about the ema-->
    <string name="painresponse">PainResponses.csv</string>         <!--Name of the file that would store the answers to the survey questions in a separate file-->
    <string name="followupactivity">FollowupActivity.csv</string>       <!--Name of the file that would store individual answers about the ema-->
    <string name="followupresponse">FollowupResponses.csv</string>         <!--Name of the file that would store the answers to the survey questions in a separate file-->
    <string name="endofdayactivity">EndOfDayActivity.csv</string>       <!--Name of the file that would store individual answers about the ema-->
    <string name="endofdayresponse">EndOfDayResponses.csv</string>         <!--Name of the file that would store the answers to the survey questions in a separate file-->
    <string name="battery">Battery.csv</string>     <!--Name of the folder where the battery information is stored-->
    <string name="accelerometer">Accelerometer.csv</string>     <!--Name of the file where the accelerometer data is stored-->
    <string name="estimote">Estimote.csv</string>       <!--Name of the file where the estimote data is stored-->
    <string name="pedometer">Pedometer.csv</string>     <!--Name of the file where the pedometer data is stored-->
    <string name="heartrate">HeartRate.csv</string>     <!--Name of the heartrate file for the data-->
    <string name="sensors">Sensors.csv</string>         <!--Name of the file where actions performed by sensor activity is stored-->
    <string name="system">Systems.csv</string>           <!--Name of the file where actions done by the system are stored-->
    <string name="sleepmode">SleepMode.csv</string>     <!--Name of the file that updates the sleepmode level-->
    <string name="eodmode">EndOfDayMode.csv</string>    <!--Name of the file that updates the endofday button-->
    <string name="steps">StepMode.csv</string>    <!--Name of the file that updates if there are currently steps being taken-->


    <!--The headers for the given files in the system-->
    <string name="settings_header">Date and Time, Key, Value</string>       <!--Header item for the settings file-->
    <string name="system_header">Date and Time, System Location, Action Performed</string>      <!--Header items for the systems file-->
    <string name="sensor_header">Date and Time, Sensor Location, Action Performed</string>      <!--Header items for the sensor file-->
    <string name="battery_header">Date and Time, Battery Level (Percentage), Currently Charging?</string>      <!--Header items for the heartrate file-->
    <string name="accelerometer_header">Date and Time, X-Value, Y-Value, Z-Value, Battery Level, Currently Charging?</string>       <!--Header items for the accelerometer file-->
    <string name="pedometer_header">Date and Time, Value, Accuracy, Battery Level, Currently Charging?</string>      <!--Header items for the pedometer file-->
    <string name="heartrate_header">Date and Time, Value, Accuracy, Battery Level, Currently Charging?</string>      <!--Header items for the heartrate file-->
    <string name="estimote_header">Date and Time, MAC Address, Major Value, Minor Value, RSSI Value, Battery Level, Currently Charging?</string>      <!--Header items for the heartrate file-->
    <string name="painactivity_header">Date and Time, Survey Type, Question Index, Verbose Answer, Answer Index</string>        <!--Header for the activity file-->
    <string name="followupactivity_header">Date and Time, Survey Type, Question Index, Verbose Answer, Answer Index</string>        <!--Header for the activity file-->
    <string name="endofdayactivity_header">Date and Time, Survey Type, Question Index, Verbose Answer, Answer Index</string>        <!--Header for the activity file-->
    <string name="painresponse_header">Date and Time, Survey Type, Question 1 Answer, Question 2 Answer, Question 3 Answer, Question 4 Answer, Question 5 Answer, Question 6 Answer, Question 7 Answer, Question 8 Answer, Question 9 Answer, Question 10 Answer, Survey Duration</string>        <!--Header for the activity file-->
    <string name="followupresponse_header">Date and Time, Survey Type, Question 1 Answer, Question 2 Answer, Question 3 Answer, Question 4 Answer, Question 5 Answer, Question 6 Answer, Question 7 Answer, Question 8 Answer, Question 9 Answer, Question 10 Answer, Survey Duration</string>        <!--Header for the activity file-->
    <string name="endofdayresponse_header">Date and Time, Survey Type, Question 1 Answer, Question 2 Answer, Question 3 Answer, Question 4 Answer, Question 5 Answer, Question 6 Answer, Question 7 Answer, Question 8 Answer, Question 9 Answer, Question 10 Answer, Question 11 Answer, Question 12 Answer, Survey Duration</string>        <!--Header for the activity file-->
</resources>
