<?xml version="1.0" encoding="utf-8"?>
<!--Layout to define the face-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Constraints for the element in the layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Text view for the questions-->

        <!--Back button attributes-->

        <!--Next button attributes-->

        <!--Answer button attributes-->

        <TextView
            android:id="@+id/request"
            android:layout_width="192dp"
            android:layout_height="74dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/survey_string"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.222" />

        <Button
            android:id="@+id/proceed"
            android:layout_width="189dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@color/dark_green"
            android:text="@string/proceed_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/snooze"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/dark_orange"
            android:text="@string/snooze_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request"
            app:layout_constraintVertical_bias="0.826" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
